--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
-<div *ngFor="let product of products">
-<div>{{product.name}}</div>
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+<div class="container">
+  <div class="row clearfix">
+    <div class="col-lg-3 col-md-4 col-sm-12" *ngFor="let product of products">
+      <div class="card product_item">
+        <div class="body">
+          <div class="cp_img img-wrapper">
+            <img src="..{{product?.imgSrc}}" alt="Product" class="img-fluid">
+            <div class="tags">
+              <span class="label-tags" *ngIf="product.no_added_sugar === true"><span class="label label-no-sugar">No aded sugar</span></span>
+              <span class="label-tags" *ngIf="product.no_gluten === true"><span class="label label-no-gluten">No gluten</span></span>
+              <span class="label-tags" *ngIf="product.vegan === true"><span class="label label-vegan">Vegan</span></span>
+              <span class="label-tags" *ngIf="product.keto === true"><span class="label label-keto">Keto</span></span>
+            </div>
+            <div class="hover">
+              <a href="javascript:void(0);" class="btn btn-primary btn-sm waves-effect"><i
+                class="zmdi zmdi-plus"></i></a>
+              <a href="javascript:void(0);" class="btn btn-primary btn-sm waves-effect"><i
+                class="zmdi zmdi-shopping-cart"></i></a>
+            </div>
+          </div>
+          <div class="product_details">
+            <h5><a href="ec-product-detail.html">{{product.name}}</a></h5>
+            <ul class="product_price list-unstyled">
+              <li class="old_price">{{product.price}} zł</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
