--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,47 @@
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-<div class="container">
-  <div class="row clearfix">
+
+<header class="header-area overlay">
+  <nav class="navbar navbar-expand-md navbar-dark">
+    <div class="container">
+      <a href="#" class="navbar-brand"><img src="../img/logo.png" alt="Niezła babka" class="img-fluid"></a>
+
+      <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+        <span class="menu-icon-bar"></span>
+        <span class="menu-icon-bar"></span>
+        <span class="menu-icon-bar"></span>
+      </button>
+
+      <div id="main-nav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li><a href="#" class="nav-item nav-link active">Oferta</a></li>
+          <li><a href="#" class="nav-item nav-link">O nas</a></li>
+          <li class="dropdown">
+            <a href="#" class="nav-item nav-link" data-toggle="dropdown">Edycja</a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Dodaj produkt</a>
+              <a href="#" class="dropdown-item">Edytuj lub Usuń</a>
+            </div>
+          </li>
+          <li><a href="#" class="nav-item nav-link"><i
+            class="zmdi zmdi-shopping-cart"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+
+<div class="main-conteiner ">
+  <div class="row clearfix mt-8">
     <div class="col-lg-3 col-md-4 col-sm-12" *ngFor="let product of products">
       <div class="card product_item">
         <div class="body">
           <div class="cp_img img-wrapper">
             <img src="..{{product?.imgSrc}}" alt="Product" class="img-fluid">
             <div class="tags">
-              <span class="label-tags" *ngIf="product.no_added_sugar === true"><span class="label label-no-sugar">No aded sugar</span></span>
+              <span class="label-tags" *ngIf="product.no_added_sugar === true"><span class="label label-no-sugar">No added sugar</span></span>
               <span class="label-tags" *ngIf="product.no_gluten === true"><span class="label label-no-gluten">No gluten</span></span>
               <span class="label-tags" *ngIf="product.vegan === true"><span class="label label-vegan">Vegan</span></span>
               <span class="label-tags" *ngIf="product.keto === true"><span class="label label-keto">Keto</span></span>
